[project]
name = "devbox"
version = "0.1.0"
description = "Provision a disposable cloud development workstation on AWS"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "cfn-lint>=1.53.0",
    "yamllint>=1.38.0",
]
